--- a/style.css
+++ b/style.css
@@ -144,13 +144,11 @@ section {
   font-size: clamp(12px, 2vw, 16px);
   color: rgba(0, 0, 0, 0.732);
 }
-.connect-button {
-  display: flex;
-  gap: 10px;
-}
+
 .connect-button button {
   background-color: lightskyblue;
   padding: 5px 10px;
+  margin-bottom: 10px;
   cursor: pointer;
   font-weight: 600;
   border-radius: 10px;
@@ -201,7 +199,8 @@ section {
 }
 
 .skills {
-  margin-top: 50px;
+  width: 100%;
+  margin-top: 10px;
   text-align: center;
 }
 
@@ -212,9 +211,9 @@ section {
 
 .skills-grid {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .skill {
@@ -227,10 +226,10 @@ section {
 }
 
 .skill img {
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   object-fit: contain;
-  margin-bottom: 8px;
+  margin-bottom: 5px;
 }
 
 .skill p {
@@ -360,5 +359,12 @@ textarea {
   }
   .intro-profile > img {
     width: 40%;
+  }
+  .box{
+    width: 95%;
+  }
+  .socials img {
+    width: 25px;
+    cursor: pointer;
   }
 }
