--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 15vh;
+  height: 15dvh;
   font-family: cursive;
   position: fixed;
   top: 0;
@@ -79,21 +79,21 @@ section {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 85vh;
+  height: 85dvh;
   font-family: sans-serif;
   position: sticky;
   top: 15vh;
 }
 #about,
 #contact,
-#projects {
-  margin-top: 15vh;
+#projects,
+#home {
+  margin-top: 15dvh;
 }
 .box {
   width: 80%;
   height: 90%;
   border-radius: 20px;
-  padding: 15px 30px;
   background-color: whitesmoke;
   border: 2px solid #0000003b;
 }
@@ -109,7 +109,6 @@ section {
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
   gap: 20px;
 }
 
@@ -139,16 +138,11 @@ section {
   font-size: clamp(20px, 3vw, 30px);
   color: rgb(40, 36, 36);
 }
-.intro-para {
-  padding: 15px 0;
-  font-size: clamp(12px, 2vw, 16px);
-  color: rgba(0, 0, 0, 0.732);
-}
 
 .connect-button button {
   background-color: lightskyblue;
   padding: 5px 10px;
-  margin-bottom: 10px;
+  margin: 10px 0;
   cursor: pointer;
   font-weight: 600;
   border-radius: 10px;
@@ -161,6 +155,7 @@ section {
   display: flex;
   align-items: center;
   gap: 20px;
+  margin: 5px 0;
 }
 .socials img {
   width: 35px;
@@ -174,10 +169,11 @@ section {
 /*------------------------------------------- Home----------------------------------------- */
 
 /*------------------------------------------- About----------------------------------------- */
-.about {
+.about-section {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 .about-con {
@@ -242,7 +238,7 @@ section {
 
 /*------------------------------------------- Project----------------------------------------- */
 
-.projects {
+.projects-section {
   width: 100%;
   height: 100%;
   display: flex;
@@ -253,9 +249,11 @@ section {
   display: flex;
   justify-content: center;
   width: 100%;
+  height: 100%;
 }
 .card {
   width: 80%;
+  height: 80%;
   font-size: 13px;
   border: 3px solid black;
   border-radius: 20px;
@@ -263,8 +261,7 @@ section {
   cursor: pointer;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
   gap: 10px;
   border-radius: 10px;
   background-color: #777171;
@@ -292,10 +289,11 @@ section {
 }
 .card-image {
   width: 100%;
+  height: 70%;
 }
 .card-image img {
   width: 100%;
-  max-height: 300px;
+  height: 100%;
   object-fit: cover;
   object-position: top center;
   border-top-left-radius: 10px;
@@ -304,7 +302,7 @@ section {
 /*------------------------------------------- Project----------------------------------------- */
 
 /*------------------------------------------- Contact----------------------------------------- */
-.contact {
+.contact-section {
   width: 100%;
   height: 100%;
   display: flex;
