--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ section {
 
 .box h1 {
   font-size: 3rem;
+  padding: 10px;
   color: rgb(96, 95, 95);
   text-transform: uppercase;
 }
@@ -173,7 +174,6 @@ section {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: center;
 }
 .about-con {
@@ -191,6 +191,7 @@ section {
 .about-info p {
   font-size: clamp(12px, 2vw, 16px);
   margin-top: 10px;
+  padding: 20px;
   color: rgba(0, 0, 0, 0.732);
 }
 
@@ -242,18 +243,23 @@ section {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  flex-wrap: nowrap;
 }
 .project-cards {
   display: flex;
   justify-content: center;
-  width: 100%;
+  max-width: 100%;
   height: 100%;
+  gap: 20px;
+  overflow-x: auto;
+  padding: 10px;
 }
 .card {
-  width: 80%;
+  width: 100%;
   height: 80%;
+  overflow: hidden;
   font-size: 13px;
   border: 3px solid black;
   border-radius: 20px;
@@ -376,7 +382,7 @@ textarea {
     justify-content: space-between;
   }
   .contact-form {
-    width: 100%;
+    width: 95%;
   }
   input {
     margin-bottom: 10px;
@@ -402,3 +408,5 @@ textarea {
     font-size: 12px;
   }
 }
+
+
