--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 15dvh;
+  height: 15vh;
   font-family: cursive;
   position: fixed;
   top: 0;
@@ -79,7 +79,7 @@ section {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 85dvh;
+  height: 85vh;
   font-family: sans-serif;
   position: sticky;
   top: 15vh;
